--- a/practic_es_proj_001/style.css
+++ b/practic_es_proj_001/style.css
@@ -1,4 +1,5 @@
-/* main */
+/* 20201119_01 */
+/* body width 1140px */
 
 @font-face {
   font-family: 'Manrope-Light';
@@ -20,40 +21,50 @@
 
 /* clear default */
 
-ul, li {
+header, nav, ul, li {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
+
 }
 
 body {
     font-family: Manrope-ExtraLight, sans-serif, Arial, Tahoma;
     font-size: 15px;
-    width: 100%;
-    height: 1000px;
+    width: 1140px;
+    height: 768px;
     margin: 0 auto;
     padding: 15px 15px;
     box-sizing: border-box;
 }
 
 header {
+     height: 192px;
     /* width: 150vh; */
-    margin: auto;
+    margin: 0 auto;
     /* padding: 16px 0px 0 16px; */
-    background-color: rgba(51, 204, 255, .25);
+    background-color: rgba(51, 204, 255, 0.25);
     position: relative;
     box-sizing: border-box;
     display: block;
 }
 
 nav {
-    height: 44px;
+    height: 36px;
     width: 100%;
     display: block;
     /* margin-left: -16px; */
-    margin-right: 0px;
+    margin: -25px auto;
+    padding: 0 0 0 5px;
     background-color: rgba(51, 204, 255, 0.75);
     /* overflow: auto; */
     position: relative;
+}
+
+footer {
+  background-color: grey;
+  margin: 5px; 0 0 0;
+  padding: 0px 0 5px 5px;
+  display: block;
 }
 
 h2 {
@@ -67,14 +78,13 @@ h2 {
 .clear {
     clear: both;
 /*
-    border: 2px solid black;
+    border: 1px solid black;
 */
 }
 
 .logo{
     box-sizing: border-box;
-
-    height: 100px;
+    /* height: 100px; */
 
 /*
     border: 1px solid green;
@@ -83,13 +93,14 @@ h2 {
 }
 
 .logo-img {
-    height: 99px;
-    margin: 16px 20px 0 16px;
+    width: 616px;
+    height: 103px;
+    margin: 16px 0px 0 16px;
     display: inline-block;
     float: left;
     box-sizing: border-box;
 }
-
+/*
 .logo-name {
     margin: 16px 0 0 0;
     height: 100px;
@@ -100,57 +111,65 @@ h2 {
     float: left;
     box-sizing: border-box;
 }
-
+*/
 .social {
-    height: 70px;
-    padding: 40px 30px 0 0;
-    font-size: 20px;
+    padding: 47px 15px 0 0;
+/*    font-size: 20px; */
     display: inline-block;
     float: right;
-    box-sizing: border-box;
 }
 
 .social-name{
-    height: 30px;
+    width: 95px;
     margin: 0 0 5px 0;
     opacity: 0.5;
     display: block;
 }
 
 .tagline{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     font-size: 38px;
     text-transform: uppercase;
     text-align: center;
     color: rgba(204, 51, 0, 1);
     position: relative;
-    bottom: 25px;
+    bottom: 37px;
 }
-
+/*
 .navigation ul {
     list-style-type: none;
-    font-family: Manrope-Light, san-serif, Arial, Tahoma;
-    font-weight: 900;
-    font-size: 18px;
-    margin: 0 0 0 19px;
-    /* padding: 15px 0 15px 9px; */
-    text-transform: uppercase;
-    /* height: auto; */
+    margin: 0 0 0 0px;
     position: relative;
-    top: 10px;
+    top: 0px;
+    display: inline-block;
+
 }
 
 .navigation li {
     display: inline-block;
-    height: 100px;
+    font-family: Manrope-Light, san-serif, Arial, Tahoma;
+    font-weight: 300;
+    font-size: 16px;
+    text-transform: uppercase;
+    height: 34px;
+    padding: 5px 5px;
 }
-
+*/
 .navigation a {
+    display: inline-block;
+    font-family: Manrope-Light, san-serif, Arial, Tahoma;
+    font-weight: 300;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-align: center;
+
     color: white;
     background: rgba(0, 102, 153, 1);
-    padding: 6px 12px;
-    margin-top: 0px;
+    width: 79px;
+    height: 26px;
+    padding: 1px 5px;
+    margin: 5px 2px 0 0px;
 }
 
 .main-container{
@@ -170,6 +189,10 @@ h2 {
     float: left;
 }
 
+.aside-left h3, p {
+  visibility: hidden;
+}
+
 .section-center {
     box-sizing: border-box;
     background-color: rgba(51, 204, 255, 0.15);
@@ -178,6 +201,10 @@ h2 {
     padding: 5px;
     display: inline-block;
     float: left;
+}
+
+.section-center p {
+    visibility: visible;
 }
 
 .img-002 {
@@ -193,7 +220,14 @@ h2 {
     height: 350px;
     padding: 5px;
     float: right;
+}
 
+.aside-right h3, p {
+  visibility: hidden;
+}
+
+footer p {
+    visibility: visible;
 }
 
 .auxil-01 {
